20teams man & ready

--- a/killzone.html
+++ b/killzone.html
@@ -1,1 +1,3 @@
-]
+<h1>There are some defeats more triumphant than victories.</h1>
+<p>世の中には、勝利よりももっと勝ち誇るに足る敗北があるものだ。</p>
+<p>モンテーニュ（フランスの哲学者、モラリスト / 1533～1592）</p>
