formation,killzone,prachute files update

--- a/parachute.html
+++ b/parachute.html
@@ -6,3 +6,9 @@
   伝説というのは、過去の業績にしがみついている老人のことだろ。オレは今でも現役だ。
 </p>
 <p>マイルス・デイヴィス（米国のジャズトランペット奏者 / 1926～1991）</p>
+
+<p>
+  「勝つ意欲」はたいして重要ではない。 そんなものは誰もが持ち合わせている。
+  重要なのは、勝つために準備する意欲である。
+</p>
+<p>ボビー・ナイト（バスケットボールコーチ）</p>
