--- a/formation.html
+++ b/formation.html
@@ -1,3 +1,7 @@
 <h1>Confidence is contagious. So is lack of confidence.</h1>
 <p>自信は伝染する。そして自信のなさも伝染する。</p>
 <p>ヴィンス・ロンバルディ（米国のバスケットボール選手 / 1913～1970）</p>
+
+<p>
+  人生における大きな喜びは、「君にはできない」と世間が言うことをやってのけることである。
+</p>
