--- a/killzone.html
+++ b/killzone.html
@@ -1,3 +1,9 @@
 <h1>There are some defeats more triumphant than victories.</h1>
 <p>世の中には、勝利よりももっと勝ち誇るに足る敗北があるものだ。</p>
 <p>モンテーニュ（フランスの哲学者、モラリスト / 1533～1592）</p>
+
+<p>
+  努力して結果が出ると、自信になる。 努力せず結果が出ると、傲りになる。
+  努力せず結果も出ないと、後悔が残る。
+  努力して結果が出ないとしても、経験が残る。
+</p>
