airforce file add

--- a/airforce.html
+++ b/airforce.html
@@ -1,3 +1,6 @@
 <h1>It is in your moments of decision that your destiny is shaped.</h1>
 <p>あなたの運命が形作られるのは、あなたが決断する瞬間なのです。</p>
 <p>アンソニー・ロビンズ（米国の自己啓発書作家、講演家 / 1960～）</p>
+
+<p>苦しいから逃げるのではない。 逃げるから苦しくなるのだ。</p>
+<p>ウィリアム･ジェームズ</p>
