--- a/navy.html
+++ b/navy.html
@@ -1,3 +1,6 @@
 <h1>Fear not, provided you fear; but if you fear not, then fear.</h1>
 <p>恐れる者は恐れることなかれ。だが恐れぬ者は恐れよ。</p>
 <p>パスカル（フランスの哲学者、思想家、数学者 / 1623～1662）</p>
+
+<p>失敗？これはうまくいかないということを確認した成功だよ。</p>
+<p>トーマス・エジソン</p>
