lieutenant file add

--- a/lieutenant.html
+++ b/lieutenant.html
@@ -1,3 +1,6 @@
 <h1>I saw the angel in the marble and carved until I set him free.</h1>
 <p>私は大理石の中に天使を見た。そして天使を自由にするために彫ったのだ。</p>
 <p>ミケランジェロ（イタリアのルネサンス期の芸術家 / 1475～1564）</p>
+
+<p>勝ちに不思議の勝ちあり、負けに不思議の負けなし。</p>
+<p>野村 克也</p>
