bow-and-arrow file add

--- a/bow-and-arrow.html
+++ b/bow-and-arrow.html
@@ -1,3 +1,13 @@
 <h1>You can’t help getting older, but you don’t have to get old.</h1>
 <p>年を取るのは仕方ないが、年寄りになる必要はない。</p>
 <p>ジョージ・バーンズ（米国のコメディアン、俳優 / 1896～1996）</p>
+
+<p>
+  不可能とは、 自らの力で世界を切り拓くことを放棄した臆病者の言葉だ。
+  不可能とは、 現状に甘んじるための言い訳に過ぎない。 不可能とは、
+  事実ですらなく、単なる先入観だ。 不可能とは、
+  誰かに決めつけられることではない。 不可能とは、 通過点だ。 不可能とは、
+  可能性だ。 不可能なんてありえない。
+</p>
+
+<p>モハメド・アリ</p>
