invade file add

--- a/invade.html
+++ b/invade.html
@@ -1,3 +1,6 @@
 <h1>We lost because we didn’t win.</h1>
 <p>勝たなかったから負けた。</p>
 <p>ロナウド（ブラジルのサッカー選手 / 1976～）</p>
+
+<p>努力を癖にしてしまえば苦労せずに成功できるだろう。</p>
+<p>流 音弥（作家）</p>
