parachute, gunner files add

--- a/parachute.html
+++ b/parachute.html
@@ -6,3 +6,6 @@
   伝説というのは、過去の業績にしがみついている老人のことだろ。オレは今でも現役だ。
 </p>
 <p>マイルス・デイヴィス（米国のジャズトランペット奏者 / 1926～1991）</p>
+
+<p>努力する人は希望を語り、怠ける人は不満を語る。</p>
+<p>井上 靖（小説家）</p>
