--- a/gunner.html
+++ b/gunner.html
@@ -4,3 +4,8 @@
 </h1>
 <p>わたしは、決して失望などしない。どんな失敗も、新たな一歩となるからだ。</p>
 <p>トーマス・エジソン（米国の発明家、起業家 / 1847～1931）</p>
+
+<p>
+  「勝ち負けにこだわるのはくだらない」というのは、勝てない人間が吐く言葉だ。
+</p>
+<p>流 音弥（作家）</p>
