--- a/enemy.html
+++ b/enemy.html
@@ -1,3 +1,9 @@
 <h1>Change before you have to.</h1>
 <p>変革せよ。変革を迫られる前に。</p>
 <p>ジャック・ウェルチ（米国の経営者 / 1935～）</p>
+
+<p>
+  途中であきらめちゃいけない。
+  途中であきらめてしまったら、得るものより失うものの方が、ずっと多くなってしまう。
+</p>
+<p>ルイ・アームストロング（ミュージシャン）</p>
