--- a/parachute.html
+++ b/parachute.html
@@ -6,3 +6,10 @@
   伝説というのは、過去の業績にしがみついている老人のことだろ。オレは今でも現役だ。
 </p>
 <p>マイルス・デイヴィス（米国のジャズトランペット奏者 / 1926～1991）</p>
+
+<p>
+  たいていの人はほんとうになにがほしいのか、心の中でわかっています。
+  人生の目標を教えてくれるのは直感だけ。
+  ただ、それに耳を傾けない人が多すぎるのです。
+</p>
+<p>-バーバラ・ブラハム- （米国の女性ビジネスコンサルタント）</p>
