--- a/killzone.html
+++ b/killzone.html
@@ -2,8 +2,7 @@
 <p>世の中には、勝利よりももっと勝ち誇るに足る敗北があるものだ。</p>
 <p>モンテーニュ（フランスの哲学者、モラリスト / 1533～1592）</p>
 
-<p>
-  努力して結果が出ると、自信になる。 努力せず結果が出ると、傲りになる。
-  努力せず結果も出ないと、後悔が残る。
-  努力して結果が出ないとしても、経験が残る。
-</p>
+<p>努力して結果が出ると、自信になる。</p>
+<p>努力せず結果が出ると、傲りになる。</p>
+<p>努力せず結果も出ないと、後悔が残る。</p>
+<p>努力して結果が出ないとしても、経験が残る。</p>
