navy file revision

--- a/navy.html
+++ b/navy.html
@@ -2,5 +2,5 @@
 <p>恐れる者は恐れることなかれ。だが恐れぬ者は恐れよ。</p>
 <p>パスカル（フランスの哲学者、思想家、数学者 / 1623～1662）</p>
 
-<p>失敗？これはうまくいかないということを確認した成功だよ。</p>
-<p>トーマス・エジソン</p>
+<p>人生は学校である。 そこでは幸福より不幸の方が良い教師である。</p>
+<p>-フリーチェ-</p>
