dog-tags file update

--- a/dog-tags.html
+++ b/dog-tags.html
@@ -1,3 +1,6 @@
 <h1>Giving yourself permission to lose guarantees a loss.</h1>
 <p>自分に負けを許せば、そこには必ず敗北が待っている。</p>
 <p>パット・ライリー（米国のバスケットボール監督 / 1945～）</p>
+
+<p>人は、運命を避けようとしてとった道で、しばしば運命にであう。</p>
+<p>-ジャン・ド・ラ・フォンテーヌ-</p>
