missile file update

--- a/missile.html
+++ b/missile.html
@@ -1,3 +1,6 @@
 <h1>Don’t forget to love yourself.</h1>
 <p>自分自身を愛することを忘れるな。</p>
 <p>キルケゴール（デンマークの哲学者、実存主義の創始者 / 1813～1855）</p>
+
+<p>人はそれぞれ事情をかかえ、平然と生きている</p>
+<p>伊集院静</p>
